# rust-data-structures

./: AGENTS.md  Cargo.toml  LICENSE-CC-BY-SA-4.0.md  LICENSE.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  docs.yml
assets/: README.md
benches/: README.md  bloom_filter_bench.rs  btree_bench.rs  deque_bench.rs  graph_bench.rs  hashmap_bench.rs  heap_bench.rs  linked_list_bench.rs  queue_bench.rs  skip_list_bench.rs  stack_bench.rs  trie_bench.rs  vector_bench.rs
diagrams/: 01-vector.mmd  02-linked-list.mmd  03-stack.mmd  04-queue.mmd  05-deque.mmd  06-heap.mmd  07-trie.mmd  08-graph.mmd  09-btree.mmd  10-hashmap.mmd  11-bloom-filter.mmd  12-skip-list.mmd  README.md
docs/: 01-vector.md  02-linked-list.md  03-stack.md  04-queue.md  05-deque.md  06-heap.md  07-trie.md  08-graph.md  09-btree.md  10-hashmap.md  11-bloom-filter.md  12-skip-list.md  SUMMARY.md  academy-web-ingestion.md  course-manifest.json
docs/superpowers/plans/: 2026-07-14-rust-data-structures-course.md
examples/: README.md  bloom_filter_advanced.rs  bloom_filter_basic.rs  bloom_filter_intermediate.rs  bloom_filter_real_case.rs  btree_advanced.rs  btree_basic.rs  btree_intermediate.rs  btree_real_case.rs  deque_advanced.rs  deque_basic.rs  deque_intermediate.rs  deque_real_case.rs  graph_advanced.rs  graph_basic.rs  graph_intermediate.rs  graph_real_case.rs  hashmap_advanced.rs  hashmap_basic.rs  hashmap_intermediate.rs  hashmap_real_case.rs  heap_advanced.rs  heap_basic.rs  heap_intermediate.rs  heap_real_case.rs  linked_list_advanced.rs  linked_list_basic.rs  linked_list_intermediate.rs  linked_list_real_case.rs  queue_advanced.rs  queue_basic.rs  queue_intermediate.rs  queue_real_case.rs  skip_list_advanced.rs  skip_list_basic.rs  skip_list_intermediate.rs  skip_list_real_case.rs  stack_advanced.rs  stack_basic.rs  stack_intermediate.rs  (+9 more)
examples/soluciones/: README.md  bloom_filter_cache_guard.rs  bloom_filter_false_positive_probe.rs  bloom_filter_size_estimate.rs  btree_duplicate_policy.rs  btree_ordered_index.rs  btree_trace_split.rs  deque_browser_history.rs  deque_sliding_window.rs  deque_trace_ends.rs  graph_dependency_edges.rs  graph_route_matrix.rs  graph_social_neighbors.rs  hashmap_cache_remove.rs  hashmap_collision_chain.rs  hashmap_count_words.rs  heap_dijkstra_frontier.rs  heap_top_k.rs  heap_trace_pop_order.rs  linked_list_move_front_to_back.rs  linked_list_remove_every_other.rs  linked_list_reverse_input.rs  queue_filter_ready_jobs.rs  queue_round_robin.rs  queue_trace_order.rs  skip_list_expiring_window.rs  skip_list_ordered_index.rs  skip_list_trace_levels.rs  stack_balanced_parentheses.rs  stack_trace_operations.rs  stack_undo_redo.rs  trie_autocomplete.rs  trie_trace_prefixes.rs  trie_unicode_policy.rs  vector_insert_sorted.rs  vector_retain_prefix.rs  vector_trace_growth.rs
src/: bloom_filter.rs  btree.rs  deque.rs  graph.rs  hashmap.rs  heap.rs  lib.rs  linked_list.rs  queue.rs  skip_list.rs  stack.rs  trie.rs  vector.rs
tests/: README.md  bloom_filter_test.rs  btree_test.rs  deque_test.rs  graph_test.rs  hashmap_test.rs  heap_test.rs  linked_list_test.rs  queue_test.rs  skip_list_test.rs  stack_test.rs  trie_test.rs  vector_test.rs
