[package]
name = "rust-data-structures"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeresoftx/rust-data-structures"
description = "Estructuras de datos en Rust para Jeresoft Academy."
readme = "README.md"

[lib]
name = "rust_data_structures"
path = "src/lib.rs"

[dependencies]

[[example]]
name = "solution_vector_trace_growth"
path = "examples/soluciones/vector_trace_growth.rs"

[[example]]
name = "solution_vector_insert_sorted"
path = "examples/soluciones/vector_insert_sorted.rs"

[[example]]
name = "solution_vector_retain_prefix"
path = "examples/soluciones/vector_retain_prefix.rs"

[[bench]]
name = "vector_bench"
path = "benches/vector_bench.rs"
harness = false
