[package]
name = "rust-data-structures"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeresoftx/rust-data-structures"
description = "Estructuras de datos en Rust para Jeresoft Academy."
readme = "README.md"

[lib]
name = "rust_data_structures"
path = "src/lib.rs"

[dependencies]

[[example]]
name = "solution_vector_trace_growth"
path = "examples/soluciones/vector_trace_growth.rs"

[[example]]
name = "solution_vector_insert_sorted"
path = "examples/soluciones/vector_insert_sorted.rs"

[[example]]
name = "solution_vector_retain_prefix"
path = "examples/soluciones/vector_retain_prefix.rs"

[[example]]
name = "solution_linked_list_reverse_input"
path = "examples/soluciones/linked_list_reverse_input.rs"

[[example]]
name = "solution_linked_list_move_front_to_back"
path = "examples/soluciones/linked_list_move_front_to_back.rs"

[[example]]
name = "solution_linked_list_remove_every_other"
path = "examples/soluciones/linked_list_remove_every_other.rs"

[[example]]
name = "solution_stack_trace_operations"
path = "examples/soluciones/stack_trace_operations.rs"

[[example]]
name = "solution_stack_balanced_parentheses"
path = "examples/soluciones/stack_balanced_parentheses.rs"

[[example]]
name = "solution_stack_undo_redo"
path = "examples/soluciones/stack_undo_redo.rs"

[[example]]
name = "solution_queue_trace_order"
path = "examples/soluciones/queue_trace_order.rs"

[[example]]
name = "solution_queue_round_robin"
path = "examples/soluciones/queue_round_robin.rs"

[[example]]
name = "solution_queue_filter_ready_jobs"
path = "examples/soluciones/queue_filter_ready_jobs.rs"

[[example]]
name = "solution_deque_trace_ends"
path = "examples/soluciones/deque_trace_ends.rs"

[[example]]
name = "solution_deque_sliding_window"
path = "examples/soluciones/deque_sliding_window.rs"

[[example]]
name = "solution_deque_browser_history"
path = "examples/soluciones/deque_browser_history.rs"

[[example]]
name = "solution_heap_trace_pop_order"
path = "examples/soluciones/heap_trace_pop_order.rs"

[[example]]
name = "solution_heap_top_k"
path = "examples/soluciones/heap_top_k.rs"

[[example]]
name = "solution_heap_dijkstra_frontier"
path = "examples/soluciones/heap_dijkstra_frontier.rs"

[[example]]
name = "solution_trie_trace_prefixes"
path = "examples/soluciones/trie_trace_prefixes.rs"

[[example]]
name = "solution_trie_autocomplete"
path = "examples/soluciones/trie_autocomplete.rs"

[[example]]
name = "solution_trie_unicode_policy"
path = "examples/soluciones/trie_unicode_policy.rs"

[[example]]
name = "solution_graph_dependency_edges"
path = "examples/soluciones/graph_dependency_edges.rs"

[[example]]
name = "solution_graph_social_neighbors"
path = "examples/soluciones/graph_social_neighbors.rs"

[[example]]
name = "solution_graph_route_matrix"
path = "examples/soluciones/graph_route_matrix.rs"

[[bench]]
name = "vector_bench"
path = "benches/vector_bench.rs"
harness = false

[[bench]]
name = "linked_list_bench"
path = "benches/linked_list_bench.rs"
harness = false

[[bench]]
name = "stack_bench"
path = "benches/stack_bench.rs"
harness = false

[[bench]]
name = "queue_bench"
path = "benches/queue_bench.rs"
harness = false

[[bench]]
name = "deque_bench"
path = "benches/deque_bench.rs"
harness = false

[[bench]]
name = "heap_bench"
path = "benches/heap_bench.rs"
harness = false

[[bench]]
name = "trie_bench"
path = "benches/trie_bench.rs"
harness = false

[[bench]]
name = "graph_bench"
path = "benches/graph_bench.rs"
harness = false
